test/integration/bad/embedded_laplace/bad_overload.stan
functions {
  real laplace_marginal_tol_neg_binomial_2_log_lpmf(int y) {
    return 1.0;
  }
}
